examples/test/testpolicy4491.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4491
  namespace: namespace19
spec:
  podSelector:
    matchLabels:
      key17: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value9
          key16: value26
      podSelector:
        matchLabels:
          key41: value43
          key39: value14
          key38: value41
